instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:3: error: type blue is not a member of object java.awt.Color
setCouleurBrosse(c:Color.blue)
                         ^InstructionsDrawG:3: error: not found: value c
setCouleurBrosse(c:Color.blue)
                 ^